# bose-unofficial-api

./: .env.example  .flake8  .gitignore  LICENSE  README.md  config.json.example  package.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: pylint-and-build.yml  ruff.yml
bose_unofficial_api/: api.py  auth.py  capabilities.py  connection.py  main.py  speaker.py  variables.py
bose_unofficial_api/event/: observer.py  sender.py
bose_unofficial_api/types/speaker/: audio.py  content.py  network.py  remote.py  subscription.py  system.py  system_capabilities.py
docs/: authentication.md  protocol.md
docs/methods/: remote.md  subscription.md
docs/methods/audio/: format.md  mode.md  surround.md  volume.md
docs/methods/content/: nowPlaying.md
docs/methods/network/: wifi_status.md
docs/methods/system/: capabilities.md  info.md  remote.md  wifi_status.md
src/: index.ts  websocketSession.ts
src/functions/: deepCopy.ts
