[tool.poetry]
name = "bose-unofficial-api"
version = "0.1.0"
description = ""
authors = ["Roy van Schaijk <git@rvsit.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
websockets = "^12.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']

