[tool.poetry]
name = "bose-unofficial-api"
version = "0.1.0"
description = ""
authors = ["Roy van Schaijk <git@rvsit.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
websockets = "^12.0"
requests = "^2.31.0"
pyjwt = "^2.8.0"

[tool.poetry.group.dev.dependencies]
pylint = "^3.0.3"
ruff = "^0.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "bose_unofficial_api.main:start"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = false

[tool.pylint.main]
fail-under = 10

[tool.pylint.format]
# Expected format of line ending, e.g. empty (any line ending), LF or CRLF.
# expected-line-ending-format =

# Regexp for a line that is allowed to be longer than the limit.
# Comments and li
ignore-long-lines = "^(\\s*(# )?<?https?://\\S+>?|\\s*# .*)$"

[tool.pylint."messages control"]
# Disable the message, report, category or checker with the given id(s). You can
# either give multiple identifiers separated by comma (,) or put this option
# multiple times (only on the command line, not in the configuration file where
# it should appear only once). You can also use "--disable=all" to disable
# everything first and then re-enable specific checks. For example, if you want
# to run only the similarities checker, you can use "--disable=all
# --enable=similarities". If you want to run only the classes checker, but have
# no Warning level messages displayed, use "--disable=all --enable=classes
# --disable=W".
disable = "raw-checker-failed, bad-inline-option, locally-disabled, file-ignored, suppressed-message, useless-suppression, deprecated-pragma, use-symbolic-message-instead, use-implicit-booleaness-not-comparison-to-string, use-implicit-booleaness-not-comparison-to-zero, missing-function-docstring, missing-module-docstring, missing-class-docstring, broad-exception-raised, too-many-instance-attributes"

